--- a/style.css
+++ b/style.css
@@ -32,12 +32,10 @@ nav ul a:hover{
     color: white;
 }
 .items{
-    display:grid;
-    grid-column: (3, 1fr);
-    grid-template-columns: repeat(3, 1fr);
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
     padding: 30px 20px;
     grid-column-gap: 20px
-    grid-row-gap: 30px;
 }
 .item img{
     width: 100%;
