--- a/style.css
+++ b/style.css
@@ -33,12 +33,13 @@ nav ul a:hover{
 }
 .items{
     display: grid;
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     padding: 30px 20px;
     grid-column-gap: 20px
+    grid-row-gap: 20px
 }
 .item img{
-    width: 100%;
+    width: 80%;
     height: 300px;
     object-fit: cover;
     cursor: pointer;
